--- a/src/popup.css
+++ b/src/popup.css
@@ -6,6 +6,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 /* normalize css ends here */
 
 
@@ -15,8 +16,8 @@ html {
 }
 
 body {
-    width: 350px;
-    height: 300px;
+    width: 500px;
+    height: 100%;
 }
 
 .app {
@@ -26,7 +27,16 @@ body {
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+}
+
+.form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
 }
 
 .title {
@@ -39,23 +49,24 @@ body {
     font-size: 12px;
 }
 
-code {
-    font-size: 12px;
-    font-family: inherit;
-    background-color: rgba(254, 237, 185, .3);
-    padding: 2px 4px;
-    border-radius: 2px;
+
+
+input[type=text],
+select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
-.counter-label {
-    font-size: 12px;
-    margin-bottom: 5px;
+label,
+input[type=checkbox] {
+    margin: 5px;
 }
 
-.counter {
-    font-size: 36px;
-    font-weight: 700;
-}
 
 .button-container {
     margin-top: 15px;
@@ -82,11 +93,4 @@ code {
 
 .button:hover {
     transform: scale(1.1);
-}
-
-.divider {
-    margin: 30px auto 25px;
-    width: 50px;
-    border: .5px dashed #000;
-    opacity: .1;
 }
