--- a/src/popup.css
+++ b/src/popup.css
@@ -72,6 +72,7 @@ input[type=checkbox] {
     margin-top: 15px;
 }
 
+
 .button {
     border: 0;
     display: inline-block;
@@ -85,6 +86,13 @@ input[type=checkbox] {
     text-decoration: none;
     transition: transform .2s ease;
     user-select: none;
+}
+
+#resetBtn {
+    display: inline-block;
+    margin-right: 0px;
+    text-decoration: underline;
+
 }
 
 .button:focus {
